--- a/FunkySystemsTheming/App.xaml
+++ b/FunkySystemsTheming/App.xaml
@@ -3,7 +3,18 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:FunkySystemsTheming"
              StartupUri="MainWindow.xaml">
+
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary x:Name="ThemeDictionary">
+                    <ResourceDictionary.MergedDictionaries>
+                        <!--<ResourceDictionary Source="\Styles\Converters.xaml" />-->
+                        <ResourceDictionary Source="/Resources/Themes/Red/Colors.xaml" />
+                        <ResourceDictionary Source="\Resources/Themes/Red\Controls.xaml" />
+                    </ResourceDictionary.MergedDictionaries>
+                </ResourceDictionary>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
